# ya-db2-exporter

./: main.sh  readme.md  setup.cfg  setup.py
extra/: prometheus.yml
lib/: main.py  ya-db2-exporter.conf.template
lib/db2/: __interface.py
lib/db2/sql/: deadlocks.sql  event_monitors.sql  mon_get_instance.sql  online_users.sql  snapdb.sql  uptime.sql
lib/prom/: __init__.py  __main.py  __metrics.py
lib/utils/: __config.py  __init__.py  __loadsql.py  __logger.py  __singleton.py
