[metadata]
name = ya-db2-exporter
version = 0.0.1
description = 
long_description = file: readme.md
keywords = DB2, Monitoring, Performance, Prometheus, HealthCheck
license = GPLv3
url = https://github.com/pslq/ya-db2-exporter
author = Paulo Sergio Lemes Queiroz
author_email = paulo.sergio.lemes.queiroz@gmail.com
platforms = [ AIX, Linux ]
classifiers =
    Programming Language :: Python :: 3

[build-system]
requires = [ "setuptools, "wheel" ]

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
 ibm-db
 prometheus-client

#[options.packages.find] #optional
#exclude=tests, sh
#build-backend = "setuptools.build_meta"
#
#[options.entry_points]
#console_scripts =
#    pq_checklist = pq_checklist:main
